# Master_RenanTorres_CIn

blink/: CMakeLists.txt  example_test.py  partitions.csv  sdkconfig  sdkconfig.old
blink/components/ADS1115/: CMakeLists.txt
blink/main/: CMakeLists.txt  Kconfig.projbuild  blink_example_main (01.12.24 - completo com buffer parcialmente implementado).c  blink_example_main (Completo).c  blink_example_main (exemplo para dissertação).c  blink_example_main (lâmpadas configuradas para reproduzir o perfil de consumo da EEAB Duas Unas).c  blink_example_main (mais completo - 17.03.25).c  blink_example_main (medidor_iot).c  blink_example_main (servidor web nao carrega 27_01).c  blink_example_main (websocket não funcionando 27_01).c  blink_example_main - (05.12.24).c
